--- a/slider-test.html
+++ b/slider-test.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/style.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/swiper.css">
   <title>Тест слайдера</title>
   <script>
@@ -76,10 +76,10 @@
         <section class="swiper-slide">
           <a href="" >
             <picture>
-          <source media="(min-width: 1280px)"
-                srcset="img/news-01-dt.jpg">
-          <img src="img/news-01-m.jpg" alt="photo" width="275" height="189">
-        </picture>
+              <source media="(min-width: 1280px)"
+              srcset="img/dtop.jpg">
+              <img src="img/mob.jpg" alt="photo" width="275" height="189">
+            </picture>
           </a>
           <div class="last-news__text">
             <h3 class="last-news__slide-title">ВАРТОВИМИ ЧАСУ ТА ЦЕГЛИН</h3>
@@ -91,10 +91,10 @@
         <section class="swiper-slide">
           <a href="" >
             <picture>
-          <source media="(min-width: 1280px)"
-                srcset="img/news-02-dt.jpg">
-          <img src="img/news-02-m.jpg" alt="photo" width="275" height="189">
-        </picture>
+              <source media="(min-width: 1280px)"
+              srcset="img/dtop.jpg">
+              <img src="img/mob.jpg" alt="photo" width="275" height="189">
+            </picture>
           </a>
           <div class="last-news__text">
             <h3 class="last-news__slide-title">ВАРТОВИМИ ЧАСУ ТА ЦЕГЛИН</h3>
@@ -105,10 +105,10 @@
         <section class="swiper-slide">
           <a href="" >
             <picture>
-          <source media="(min-width: 1280px)"
-                srcset="img/news-03-dt.jpg">
-          <img src="img/news-03-m.jpg" alt="photo" width="275" height="189">
-        </picture>
+              <source media="(min-width: 1280px)"
+              srcset="img/dtop.jpg">
+              <img src="img/mob.jpg" alt="photo" width="275" height="189">
+            </picture>
           </a>
           <div class="last-news__text">
             <h3 class="last-news__slide-title">ВАРТОВИМИ ЧАСУ ТА ЦЕГЛИН</h3>
@@ -118,7 +118,11 @@
 
         <section class="swiper-slide">
           <a href="" >
-            <img src="img/news-01-m.jpg" alt="photo" width="275" height="189">
+            <picture>
+              <source media="(min-width: 1280px)"
+              srcset="img/dtop.jpg">
+              <img src="img/mob.jpg" alt="photo" width="275" height="189">
+            </picture>
           </a>
           <div class="last-news__text">
             <h3 class="last-news__slide-title">ВАРТОВИМИ ЧАСУ ТА ЦЕГЛИН</h3>
@@ -128,7 +132,11 @@
 
         <section class="swiper-slide">
           <a href="" >
-            <img src="img/news-02-m.jpg" alt="photo" width="275" height="189">
+            <picture>
+              <source media="(min-width: 1280px)"
+              srcset="img/dtop.jpg">
+              <img src="img/mob.jpg" alt="photo" width="275" height="189">
+            </picture>
           </a>
           <div class="last-news__text">
             <h3 class="last-news__slide-title">ВАРТОВИМИ ЧАСУ ТА ЦЕГЛИН</h3>
@@ -138,7 +146,11 @@
 
         <section class="swiper-slide">
           <a href="" >
-            <img src="img/news-02-m.jpg" alt="photo" width="275" height="189">
+            <picture>
+              <source media="(min-width: 1280px)"
+              srcset="img/dtop.jpg">
+              <img src="img/mob.jpg" alt="photo" width="275" height="189">
+            </picture>
           </a>
           <div class="last-news__text">
             <h3 class="last-news__slide-title">ВАРТОВИМИ ЧАСУ ТА ЦЕГЛИН</h3>
@@ -148,7 +160,11 @@
 
         <section class="swiper-slide">
           <a href="" >
-            <img src="img/news-02-m.jpg" alt="photo" width="275" height="189">
+            <picture>
+              <source media="(min-width: 1280px)"
+              srcset="img/dtop.jpg">
+              <img src="img/mob.jpg" alt="photo" width="275" height="189">
+            </picture>
           </a>
           <div class="last-news__text">
             <h3 class="last-news__slide-title">ВАРТОВИМИ ЧАСУ ТА ЦЕГЛИН</h3>
@@ -158,7 +174,11 @@
 
         <section class="swiper-slide">
           <a href="" >
-            <img src="img/news-02-m.jpg" alt="photo" width="275" height="189">
+            <picture>
+              <source media="(min-width: 1280px)"
+              srcset="img/dtop.jpg">
+              <img src="img/mob.jpg" alt="photo" width="275" height="189">
+            </picture>
           </a>
           <div class="last-news__text">
             <h3 class="last-news__slide-title">ВАРТОВИМИ ЧАСУ ТА ЦЕГЛИН</h3>
