--- a/index.html
+++ b/index.html
@@ -205,9 +205,10 @@
         <div class="container  follow-us">
           <div class="follow-us__soc-link-wrapper" id="follow-us-sticky">
             <a class="follow-us__soc-link">слідкуй за нами
-              <svg class="follow-us__plus  follow-us__plus--close  follow-us__plus--open" width="16" height="16">
+              <!-- <svg class="follow-us__plus  follow-us__plus--close  follow-us__plus--open" width="16" height="16">
                 <use xlink:href="#plus"/>
-              </svg>
+              </svg> -->
+              <div class="follow-us__plus follow-us__plus--close follow-us__plus--open"></div>
             </a>
             <article class="social-links  social-links--close">
               <a class="social-links__link" href="https://facebook.com" target="_blank">
