--- a/index.html
+++ b/index.html
@@ -86,50 +86,71 @@
           </li>
           <li class="container  main-nav__menu-inner">
             <section class="pagination">
-              <div class="pagination__numbers">
-                <a class="active-link" href="">1</a>
-                <a class="pagination__link-dash"></a>
-                <a class="active-link" href="">2</a>
-                <a class="pagination__link-dash"></a>
-                <a class="active-link" href="">3</a>
-                <a class="pagination__link-dash"></a>
-                <a class="active-link" href="">4</a>
-                <a class="pagination__link-dash"></a>
-                <a href="">5</a>
-                <a class="pagination__link-dash"></a>
-                <a href="">6</a>
-                <a class="pagination__link-dash"></a>
-                <a href="">7</a>
-                <a class="pagination__link-dash"></a>
-                <a class="pagination__link" href="">8</a>
-                <a class="pagination__link-dash"></a>
-                <a class="pagination__link" href="">9</a>
-                <a class="pagination__link-dash"></a>
-                <a class="pagination__link" href="">10</a>
-                <a class="pagination__link-dash"></a>
-                <a class="pagination__link" href="">11</a>
-                <a class="pagination__link-dash"></a>
-                <a class="pagination__link" href="">12</a>
+              <div class="pagination__numbers  pagination__numbers--nav  swiper-pagination-nav">
+
               </div>
             </section>
-            <section class="main-nav__slider">
-              <div class="main-nav__slides">
-                <div class="main-nav__slide">
+
+            <section class="main-nav__slider  swiper-container-nav">
+              <div class="main-nav__slides  swiper-wrapper">
+                <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-01.jpg" alt="Замок" width="296" height="186">
                   </a>
                 </div>
-                <div class="main-nav__slide">
+                <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-02.jpg" alt="Замок" width="296" height="186">
                   </a>
                 </div>
-                <div class="main-nav__slide">
+                <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-03.jpg" alt="Замок" width="296" height="186">
                   </a>
                 </div>
-                <div class="main-nav__slide">
+                <div class="main-nav__slide  swiper-slide">
+                  <a class="main-nav__slide-link" href="">
+                    <img src="img/main-nav-slide-04.jpg" alt="Замок" width="295" height="186">
+                  </a>
+                </div>
+
+                <div class="main-nav__slide  swiper-slide">
+                  <a class="main-nav__slide-link" href="">
+                    <img src="img/main-nav-slide-01.jpg" alt="Замок" width="296" height="186">
+                  </a>
+                </div>
+                <div class="main-nav__slide  swiper-slide">
+                  <a class="main-nav__slide-link" href="">
+                    <img src="img/main-nav-slide-02.jpg" alt="Замок" width="296" height="186">
+                  </a>
+                </div>
+                <div class="main-nav__slide  swiper-slide">
+                  <a class="main-nav__slide-link" href="">
+                    <img src="img/main-nav-slide-03.jpg" alt="Замок" width="296" height="186">
+                  </a>
+                </div>
+                <div class="main-nav__slide  swiper-slide">
+                  <a class="main-nav__slide-link" href="">
+                    <img src="img/main-nav-slide-04.jpg" alt="Замок" width="295" height="186">
+                  </a>
+                </div>
+
+                <div class="main-nav__slide  swiper-slide">
+                  <a class="main-nav__slide-link" href="">
+                    <img src="img/main-nav-slide-01.jpg" alt="Замок" width="296" height="186">
+                  </a>
+                </div>
+                <div class="main-nav__slide  swiper-slide">
+                  <a class="main-nav__slide-link" href="">
+                    <img src="img/main-nav-slide-02.jpg" alt="Замок" width="296" height="186">
+                  </a>
+                </div>
+                <div class="main-nav__slide  swiper-slide">
+                  <a class="main-nav__slide-link" href="">
+                    <img src="img/main-nav-slide-03.jpg" alt="Замок" width="296" height="186">
+                  </a>
+                </div>
+                <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-04.jpg" alt="Замок" width="295" height="186">
                   </a>
@@ -177,6 +198,7 @@
               </a>
             </article>
           </li>
+
           <li class="main-nav__lang-switcher-wrapper">
             <section class="main-nav__lang-switcher">
               <a href="" class="main-nav__switch  main-nav__switch--ua  main-nav__switch--active">ua</a>
@@ -275,30 +297,7 @@
       </div>
 
       <section class="container  pagination">
-        <div class="pagination__numbers  swiper-pagination-main">
-          <!-- <div class="active-link  swiper-pagination-bullet">1</div>
-          <div class="pagination__link-dash"></div>
-          <div class="active-link  swiper-pagination-bullet">2</div>
-          <div class="pagination__link-dash"></div>
-          <div class="swiper-pagination-bullet">3</div>
-          <div class="pagination__link-dash"></div>
-          <div class="swiper-pagination-bullet" >4</div>
-          <div class="pagination__link-dash"></div>
-          <div class="swiper-pagination-bullet" >5</div>
-          <div class="pagination__link-dash"></div>
-          <div class="swiper-pagination-bullet">6</div>
-          <div class="pagination__link-dash"></div>
-          <div class="swiper-pagination-bullet">7</div>
-          <div class="pagination__link-dash"></div>
-          <div class="pagination__link  pagination__link--white  swiper-pagination-bullet">8</div>
-          <div class="pagination__link-dash  pagination__link-dash--white"></div>
-          <div class="pagination__link  pagination__link--white  swiper-pagination-bullet">9</div>
-          <div class="pagination__link-dash  pagination__link-dash--white"></div>
-          <div class="pagination__link  pagination__link--white  swiper-pagination-bullet">10</div>
-          <div class="pagination__link-dash  pagination__link-dash--white"></div>
-          <div class="pagination__link  pagination__link--white  swiper-pagination-bullet">11</div>
-          <div class="pagination__link-dash  pagination__link-dash--white"></div>
-          <div class="pagination__link  pagination__link--white  swiper-pagination-bullet">12</div> -->
+        <div class="pagination__numbers  pagination__numbers--main  swiper-pagination-main">
         </div>
       </section>
 
@@ -688,7 +687,7 @@
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.js"></script>
   <script src="js/lib/jquery.sticky-kit.js"></script>
-  <script src="js/lib/swiper.jquery.js"></script>
+  <script src="js/lib/swiper.jquery.min.js"></script>
   <!-- <script src="js/lib/background-check.min.js"></script> -->
   <script src="js/scripts.js"></script>
 
@@ -756,14 +755,8 @@
         pagination: '.swiper-pagination-main',
         paginationClickable: true,
         paginationBulletRender: function (swiper, index, className) {
-          /*BackgroundCheck.refresh('.main-slider__slide-text-wrapper');*/
-          return '<span class="' + className + '">' + (index + 1) + '</span>'/* + '<span class="pagination__link-dash"></span>'*/;
+          return '<span class="' + className + '">' + (index + 1) + '</span>';
         },
-        /*onSlideChangeStart: function (swiper) {
-          console.log(swiper.activeIndex, swiper.realIndex);
-
-        },*/
-
         onSlideChangeStart: function (swiper) {
           // console.log('Left: '+ swiper.realIndex + ' Right: ' + swiper.realIndex+1);
           //var slideLeft = swiper.slides[swiper.activeIndex];
@@ -782,6 +775,23 @@
           // slideRight.style.color = 'red';
           slideRight.style.transform = 'translateY(' + 35 + 'px)';
           slideRight.childNodes[7].className = 'main-slider__slide-text-wrapper--right';
+        }
+
+      });
+
+      var swiperN = new Swiper('.swiper-container-nav', {
+
+        initialSlide: 0,
+        slidesPerView: 4,
+        spaceBetween: 20,
+        autoplay: 2000,
+        // autoplayDisableOnInteraction: true,
+        loop: true,
+        grabCursor: true,
+        pagination: '.swiper-pagination-nav',
+        paginationClickable: true,
+        paginationBulletRender: function (swiper, index, className) {
+          return '<span class="' + className + '">' + (index + 1) + '</span>';
         }
 
       });
