--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     </header><!-- /header -->
 
-    <main class="main-index">
+    <main class="main main--index">
 
       <div class="hero-main-block-wrapper" id="hero-main-block-wrapper">
 
