--- a/keepers.html
+++ b/keepers.html
@@ -3,8 +3,13 @@
 
 <head>
   <meta charset="utf-8"/>
-  <meta name="description" content="">
+  <!-- <meta name="description" content=""> -->
+  <!-- <meta name="author" content=""/> -->
+  <!-- <meta name="copyright" content="(c)"> -->
+  <!-- <meta http-equiv="Reply-to" content="mail@emal.org"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="MobileOptimized" content="320">
   <link rel="stylesheet" type="text/css" href="css/style.min.css">
   <title>12 Вартових: Вартові</title>
   <script>
@@ -216,7 +221,7 @@
               </a>
             </h1>
             <div class="page-header__text">
-              <h2 class="page-header__guards">Иосиф Татьяна Бартош</h2>
+              <h2 class="page-header__guards">Иосиф та Татьяна Бартош</h2>
               <span class="page-header__location">с. Чінадієво, Закарпаття</span>
             </div>
           </div>
