--- a/castles.html
+++ b/castles.html
@@ -3,10 +3,15 @@
 
 <head>
   <meta charset="utf-8"/>
-  <meta name="description" content="">
+  <!-- <meta name="description" content=""> -->
+  <!-- <meta name="author" content=""/> -->
+  <!-- <meta name="copyright" content="(c)"> -->
+  <!-- <meta http-equiv="Reply-to" content="mail@emal.org"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="MobileOptimized" content="320">
   <link rel="stylesheet" type="text/css" href="css/style.min.css">
-  <title>12 Вартових: Вартові</title>
+  <title>12 Вартових: Замки</title>
   <script>
     // Picture element HTML5 shiv
     document.createElement("picture");
