--- a/index.html
+++ b/index.html
@@ -73,12 +73,6 @@
       <nav class="main-nav">
         <div class="container  main-nav__top">
 
-          <!-- <section class="main-nav__lang-switcher">
-            <a href="" class="main-nav__switch  main-nav__switch--ua  main-nav__switch--active">ua</a>
-            <a href="" class="main-nav__switch  main-nav__switch--ru">ru</a>
-            <a href="" class="main-nav__switch  main-nav__switch--en">en</a>
-          </section> -->
-
           <section class="main-nav__sponsor">
             <article class="main-nav__skoda">
               <a href="">
@@ -138,7 +132,7 @@
 
           <li class="main-nav__logo-box">
             <a class="main-nav__logo-menu-link" href="#">
-              <img class="main-nav__logo-menu" src="img/12-guards-logo.svg" alt="12 Вартових" width="160">
+              <img class="main-nav__logo-menu" src="img/12-guards-logo.svg" alt="12 Вартових" width="160" height="69.500">
             </a>
           </li>
 
@@ -151,93 +145,110 @@
 
             <section class="main-nav__slider  swiper-container-nav">
               <div class="main-nav__slides  swiper-wrapper">
+
                 <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-01.jpg" alt="Замок" width="296" height="186">
+                    <span>Название Замка… Название Замка… Название Замка…</span>
                   </a>
                 </div>
                 <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-02.jpg" alt="Замок" width="296" height="186">
+                    <span>Название Замка…</span>
                   </a>
                 </div>
                 <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-03.jpg" alt="Замок" width="296" height="186">
+                    <span>Название Замка…</span>
                   </a>
                 </div>
                 <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-04.jpg" alt="Замок" width="295" height="186">
+                    <span>Название Замка…</span>
                   </a>
                 </div>
 
                 <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-01.jpg" alt="Замок" width="296" height="186">
+                    <span>Название Замка…</span>
                   </a>
                 </div>
                 <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-02.jpg" alt="Замок" width="296" height="186">
+                    <span>Название Замка…</span>
                   </a>
                 </div>
                 <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-03.jpg" alt="Замок" width="296" height="186">
+                    <span>Название Замка…</span>
                   </a>
                 </div>
                 <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-04.jpg" alt="Замок" width="295" height="186">
+                    <span>Название Замка…</span>
                   </a>
                 </div>
 
                 <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-01.jpg" alt="Замок" width="296" height="186">
+                    <span>Название Замка…</span>
                   </a>
                 </div>
                 <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-02.jpg" alt="Замок" width="296" height="186">
+                    <span>Название Замка…</span>
                   </a>
                 </div>
                 <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-03.jpg" alt="Замок" width="296" height="186">
+                    <span>Название Замка…</span>
                   </a>
                 </div>
                 <div class="main-nav__slide  swiper-slide">
                   <a class="main-nav__slide-link" href="">
                     <img src="img/main-nav-slide-04.jpg" alt="Замок" width="295" height="186">
+                    <span>Название Замка…</span>
                   </a>
                 </div>
+
               </div>
             </section>
           </li>
 
-          <li class="main-nav__item">
-            <a href="">12 Вартових</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="">Про проект</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="">Хто ми</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="">Друзі</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="">Концесія</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="">Новини</a>
-          </li>
-          <li class="main-nav__item">
-            <a href="">Контакты</a>
-          </li>
+          <div class="main-nav__item-container">
+            <li class="main-nav__item  main-nav__item--menu-link">
+              <a href="" class="active" >12 Вартових</a>
+            </li>
+            <li class="main-nav__item  main-nav__item--menu-link">
+              <a href="">Про проект</a>
+            </li>
+            <li class="main-nav__item  main-nav__item--menu-link">
+              <a href="">Хто ми</a>
+            </li>
+            <li class="main-nav__item  main-nav__item--menu-link">
+              <a href="">Друзі</a>
+            </li>
+            <li class="main-nav__item  main-nav__item--menu-link">
+              <a href="">Концесія</a>
+            </li>
+            <li class="main-nav__item  main-nav__item--menu-link">
+              <a href="">Новини</a>
+            </li>
+            <li class="main-nav__item  main-nav__item--menu-link">
+              <a href="">Контакты</a>
+            </li>
+          </div>
+
           <li class="main-nav__item  main-nav__item--lang">
             <section class="main-nav__lang-switcher">
               <a href="" class="main-nav__switch  main-nav__switch--ua  main-nav__switch--active">ua</a>
@@ -265,13 +276,6 @@
             </article>
           </li>
 
-          <!-- <li class="main-nav__lang-switcher-wrapper">
-            <section class="main-nav__lang-switcher">
-              <a href="" class="main-nav__switch  main-nav__switch--ua  main-nav__switch--active">ua</a>
-              <a href="" class="main-nav__switch  main-nav__switch--ru">ru</a>
-              <a href="" class="main-nav__switch  main-nav__switch--en">en</a>
-            </section>
-          </li> -->
         </ul>
       </nav>
 
@@ -289,7 +293,7 @@
             </a>
           </h1>
 
-          <span class="page-header__intro">Коли минуле зустрічається з теперішнім, щоб змінити майбутнє... </span>
+          <span class="page-header__intro">Коли минуле зустрічається <br> з теперішнім, <br> щоб змінити майбутнє... </span>
 
         </div>
 
@@ -304,9 +308,6 @@
         <div class="container  follow-us">
           <div class="follow-us__soc-link-wrapper" id="follow-us-sticky">
             <a class="follow-us__soc-link">Поділитися
-              <!-- <svg class="follow-us__plus  follow-us__plus--close  follow-us__plus--open" width="16" height="16">
-                <use xlink:href="#plus"/>
-              </svg> -->
               <div class="follow-us__plus follow-us__plus--close follow-us__plus--open"></div>
             </a>
             <article class="social-links  social-links--close">
@@ -335,6 +336,7 @@
           </div>
 
         </div>
+
         <article class="hero">
           <div class="container  hero__text-wrapper">
             <h2 class="hero__week">Герой тижня</h2>
@@ -763,13 +765,13 @@
         <div class="subscription__inner">
 
           <div class="subscription__logo-container">
-            <a href="https://findinukraine.com.ua/12">
+            <a class="subscription__logo-guards" href="https://findinukraine.com.ua/12">
               <img src="img/12-guards-logo.svg" alt="12 Вартових" width="67" height="112">
             </a>
-            <a href="https://findinukraine.com.ua">
+            <a class="subscription__logo-findin" href="https://findinukraine.com.ua">
               <img src="img/find-in-ukraine-logo.png" alt="Найдено в Укрвине" width="152" height="36">
             </a>
-            <a href="">
+            <a class="subscription__logo-umh-group" href="">
               <img src="img/umh-group-logo.png" alt="UMH-Group" width="124" height="35">
             </a>
           </div>
@@ -807,9 +809,19 @@
         </ul>
       </article>
       <section class="copyrights">
+
         <div class="copyrights__logo-wrapper">
-          <img class="copyrights__logo" src="img/12-guards-logo.svg" alt="12 Вартових" width="48" height="81">
+          <a class="subscription__logo-guards" href="https://findinukraine.com.ua/12">
+              <img src="img/12-guards-logo.svg" alt="12 Вартових" width="67" height="112">
+            </a>
+            <a class="subscription__logo-findin" href="https://findinukraine.com.ua">
+              <img src="img/find-in-ukraine-logo.png" alt="Найдено в Укрвине" width="152" height="36">
+            </a>
+            <a class="subscription__logo-umh-group" href="">
+              <img src="img/umh-group-logo.png" alt="UMH-Group" width="124" height="35">
+            </a>
         </div>
+
         <div class="copyrights__text">
           <a class="copyrights__findin" href="http://findinukraine.com" target="_blank">© 2017 — Знайдено в Україні. Всі права захищено</a>
           <a class="copyrights__link" href="it-doors.com" target="_blank">
@@ -818,18 +830,47 @@
       </div>
       </section>
     </div>
+
     <a href="" class="join-up">
       <span>Приєднатися</span>
       <img src="img/icons/ballon.svg" alt="">
     </a>
+
   </footer>
 
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.js"></script>
   <script src="js/lib/jquery.sticky-kit.js"></script>
   <script src="js/lib/swiper.jquery.min.js"></script>
-  <!-- <script src="js/lib/background-check.min.js"></script> -->
   <script src="js/scripts.js"></script>
+
+  <script>
+    window.addEventListener('DOMContentLoaded', function (e) {
+      $("#sticky_burger").stick_in_parent(
+        {
+          parent: '#sticky-wrapper',
+          offset_top: 20,
+          spacer: false
+        }
+      );
+
+      $("#follow-us-sticky").stick_in_parent(
+        {
+          parent: '#sticky-wrapper',
+          offset_top: 20
+        }
+      );
+
+
+      $("#follow-us-toggler").stick_in_parent(
+        {
+          parent: '#hero-main-block-wrapper',
+          offset_top: 20,
+          spacer: false
+        }
+      );
+    });
+  </script>
 
 </body>
 
